# minimaldask

./: .pre-commit-config.yaml  Dockerfile  README.md  dasky.py  deployment.yaml  docker-compose.yml  entrypoint.sh  kubernetes_helper.py  pyproject.toml  service.yaml  setup.cfg  sheduler.yaml  worker.yaml
.github/workflows/: main.yml
src/minimaldask/: __init__.py  kubernetes_helper.py  service.yaml  sheduler.yaml
