[metadata]
name = minimaldask
version = 0.1.0
description = A package to controldask kubernetes deployment. Suitable to run at an local Raspberry Pi Cluster as well as GCloud or similar.
author = Heiko Wagner
author_email = heikowagner@thebigdatablog.com
license = Apache-2.0
readme = README.md
python = ^3.6
homepage = https://www.thebigdatablog.com/building-a-minimal-cost-efficient-dask-cluster/
repository = https://github.com/heikowagner/minimaldask
documentation = https://www.thebigdatablog.com/building-a-minimal-cost-efficient-dask-cluster/
classifiers = 
    Topic :: Cluster Deployment

[options]
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
minimaldask = *.yaml

#[options.data_files]
#. = sheduler.yaml, worker.yaml, service.yaml